fix text overflow in diff

--- a/app/DiffView/style.module.css
+++ b/app/DiffView/style.module.css
@@ -19,3 +19,7 @@
 .green {
 	background-color: #ccffcc;
 }
+
+.pre {
+	white-space: pre-wrap;
+}
